# python-OP3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  op3.py  package.xml  python3_env  setup.py
data/: org_params.json  up_params_deg1.json
python-OP3/: op3.py
python-OP3/framework/: __init__.py
python-OP3/framework/modules/: op3_action.py  op3_utility.py  op3_walking.py  open_cr.py  robotis_controller.py  usb_cam.py
python-OP3/py_module/: __init__.py  framework.py  op3_action.py  op3_direct_control.py  op3_utility.py  op3_walking.py  open_cr.py  robotis_controller.py  useful_method.py
python-OP3/soccer/: ball_follower.py
python_op3/: op3.py
python_op3/framework/core/: open_cr.py  robotis_controller.py  usb_cam.py
python_op3/framework/modules/: action.py  adaptive_walking.py  direct_control.py  head_control.py  online_walking.py  utility.py  walking.py
python_op3/vision_comm/: vision_tracking.py  yolo_local.py  yolo_rmt.py
python_op3/voice_comm/: voice_cmd.json  voice_control.py
scripts/: op3_test
src/python_op3/: op3.py
src/python_op3/framework/core/: robotis_controller.py
src/python_op3/framework/modules/: action.py  adaptive_walking.py  direct_control.py  head_control.py
test/: op3_test.py  ramp_walking.py  ros_walking.py
test/data/: down_params.json  up_params.json
